--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Wonka Team
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large"> Wonka Team</ion-title>
-    </ion-toolbar>
+<ion-content fullscreen="true">
+  <!-- Searchbar Component in a Toolbar -->
+  <ion-header [translucent]="true" class="ion-no-border">
+      <ion-toolbar>
+        <ion-title size="small">Galleries Now</ion-title>
+        <app-search-bar></app-search-bar>
+     </ion-toolbar>
   </ion-header>
+  <!-- Stories Next Events -->
+  <app-events-swiper></app-events-swiper>
+  <!-- Posts Currents Events -->
+  <app-current-events></app-current-events>
+
+
+
   <div>
     <!--Chips to filter by Gender-->
     <ion-chip color="danger" outline
@@ -42,4 +44,6 @@
     </ion-item>
 
   </ion-list>
-  </ion-content>
+
+
+</ion-content>
