--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,12 +2,22 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="reorder-four-outline"></ion-icon>
-      <ion-label>Team</ion-label>
+      <ion-label>News</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+   <!-- <ion-tab-button tab="tab2">
       <ion-icon name="information-circle-outline"></ion-icon>
       <ion-label>Help</ion-label>
+    </ion-tab-button>-->
+
+    <ion-tab-button tab="tab3">
+      <ion-icon name="cart"></ion-icon>
+      <ion-label>Cart</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab4">
+      <ion-icon name="person"></ion-icon>
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
